# ai_accounting_software

./: .env.example  .gitignore  CLAUDE.md  README.md  START_PROMPT.md  secrets.inbox.env.example
Docs/: BUILD_ROADMAP.md  (+13 more)
api/: .env.example  pyproject.toml
api/src/cyprus_bookkeeping_api/: __init__.py  auth.py  config.py  deps.py  main.py  worker.py
api/src/cyprus_bookkeeping_api/access/: __init__.py  audit.py  decision.py  dependency.py  enums.py  matrix.py  principal.py  resolver.py
api/src/cyprus_bookkeeping_api/ai_integrations/: __init__.py  anthropic_client.py  call_context.py  circuit_breaker.py  errors.py  local_llm_client.py
api/src/cyprus_bookkeeping_api/exports/: __init__.py  generators.py  pdf.py  runner.py  serializers.py  storage.py  xlsx.py
api/src/cyprus_bookkeeping_api/hashing/: __init__.py  core.py  domain.py  uuid7.py
api/tests/: conftest.py  test_access_can_perform.py  test_access_matrix.py  test_ai_integrations_anthropic_client.py  test_ai_integrations_local_llm.py  test_export_generators.py  test_export_runner.py  test_export_serializers.py  test_hashing_primitives.py  test_ingestion_normalize.py  test_ingestion_runner.py  test_orchestrator_classification.py  test_orchestrator_engine.py  test_orchestrator_income.py  test_orchestrator_ledger.py  test_orchestrator_matching.py  test_orchestrator_units.py  test_parsers_revolut_csv.py  test_principal_snapshot.py  test_rls_matrix_parity.py  test_secure_http.py  test_step_up_vocab_guard.py  test_tenant_isolation_invariants.py  test_vies_client.py  test_vies_runner.py  test_worker_endpoint.py
(+1473 files in other folders)
